// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`eslint frontend config 1`] = `
{
  "env": {
    "browser": true,
  },
  "globals": {},
  "ignorePatterns": [],
  "noInlineConfig": undefined,
  "parser": null,
  "parserOptions": {
    "ecmaFeatures": {
      "jsx": true,
    },
    "ecmaVersion": 2022,
    "jsxPragma": null,
    "sourceType": "module",
  },
  "plugins": [
    "react-hooks",
    "jsx-a11y",
    "react",
  ],
  "reportUnusedDisableDirectives": undefined,
  "rules": {
    "curly": [
      "error",
      "all",
    ],
    "jsx-a11y/alt-text": [
      "error",
    ],
    "jsx-a11y/anchor-ambiguous-text": [
      "off",
    ],
    "jsx-a11y/anchor-has-content": [
      "error",
    ],
    "jsx-a11y/anchor-is-valid": [
      "error",
    ],
    "jsx-a11y/aria-activedescendant-has-tabindex": [
      "error",
    ],
    "jsx-a11y/aria-props": [
      "error",
    ],
    "jsx-a11y/aria-proptypes": [
      "error",
    ],
    "jsx-a11y/aria-role": [
      "error",
    ],
    "jsx-a11y/aria-unsupported-elements": [
      "error",
    ],
    "jsx-a11y/autocomplete-valid": [
      "error",
    ],
    "jsx-a11y/click-events-have-key-events": [
      "error",
    ],
    "jsx-a11y/control-has-associated-label": [
      "off",
      {
        "ignoreElements": [
          "audio",
          "canvas",
          "embed",
          "input",
          "textarea",
          "tr",
          "video",
        ],
        "ignoreRoles": [
          "grid",
          "listbox",
          "menu",
          "menubar",
          "radiogroup",
          "row",
          "tablist",
          "toolbar",
          "tree",
          "treegrid",
        ],
        "includeRoles": [
          "alert",
          "dialog",
        ],
      },
    ],
    "jsx-a11y/heading-has-content": [
      "error",
    ],
    "jsx-a11y/html-has-lang": [
      "error",
    ],
    "jsx-a11y/iframe-has-title": [
      "error",
    ],
    "jsx-a11y/img-redundant-alt": [
      "error",
    ],
    "jsx-a11y/interactive-supports-focus": [
      "error",
      {
        "tabbable": [
          "button",
          "checkbox",
          "link",
          "searchbox",
          "spinbutton",
          "switch",
          "textbox",
        ],
      },
    ],
    "jsx-a11y/label-has-associated-control": [
      "error",
    ],
    "jsx-a11y/label-has-for": [
      "off",
    ],
    "jsx-a11y/media-has-caption": [
      "error",
    ],
    "jsx-a11y/mouse-events-have-key-events": [
      "error",
    ],
    "jsx-a11y/no-access-key": [
      "error",
    ],
    "jsx-a11y/no-autofocus": [
      "error",
    ],
    "jsx-a11y/no-distracting-elements": [
      "error",
    ],
    "jsx-a11y/no-interactive-element-to-noninteractive-role": [
      "error",
      {
        "canvas": [
          "img",
        ],
        "tr": [
          "none",
          "presentation",
        ],
      },
    ],
    "jsx-a11y/no-noninteractive-element-interactions": [
      "error",
      {
        "alert": [
          "onKeyUp",
          "onKeyDown",
          "onKeyPress",
        ],
        "body": [
          "onError",
          "onLoad",
        ],
        "dialog": [
          "onKeyUp",
          "onKeyDown",
          "onKeyPress",
        ],
        "handlers": [
          "onClick",
          "onError",
          "onLoad",
          "onMouseDown",
          "onMouseUp",
          "onKeyPress",
          "onKeyDown",
          "onKeyUp",
        ],
        "iframe": [
          "onError",
          "onLoad",
        ],
        "img": [
          "onError",
          "onLoad",
        ],
      },
    ],
    "jsx-a11y/no-noninteractive-element-to-interactive-role": [
      "error",
      {
        "fieldset": [
          "radiogroup",
          "presentation",
        ],
        "li": [
          "menuitem",
          "menuitemradio",
          "menuitemcheckbox",
          "option",
          "row",
          "tab",
          "treeitem",
        ],
        "ol": [
          "listbox",
          "menu",
          "menubar",
          "radiogroup",
          "tablist",
          "tree",
          "treegrid",
        ],
        "table": [
          "grid",
        ],
        "td": [
          "gridcell",
        ],
        "ul": [
          "listbox",
          "menu",
          "menubar",
          "radiogroup",
          "tablist",
          "tree",
          "treegrid",
        ],
      },
    ],
    "jsx-a11y/no-noninteractive-tabindex": [
      "error",
      {
        "allowExpressionValues": true,
        "roles": [
          "tabpanel",
        ],
        "tags": [],
      },
    ],
    "jsx-a11y/no-redundant-roles": [
      "error",
    ],
    "jsx-a11y/no-static-element-interactions": [
      "error",
      {
        "allowExpressionValues": true,
        "handlers": [
          "onClick",
          "onMouseDown",
          "onMouseUp",
          "onKeyPress",
          "onKeyDown",
          "onKeyUp",
        ],
      },
    ],
    "jsx-a11y/role-has-required-aria-props": [
      "error",
    ],
    "jsx-a11y/role-supports-aria-props": [
      "error",
    ],
    "jsx-a11y/scope": [
      "error",
    ],
    "jsx-a11y/tabindex-no-positive": [
      "error",
    ],
    "jsx-quotes": [
      "error",
      "prefer-single",
    ],
    "react-hooks/exhaustive-deps": [
      "warn",
    ],
    "react-hooks/rules-of-hooks": [
      "error",
    ],
    "react/display-name": [
      2,
    ],
    "react/jsx-boolean-value": [
      "error",
    ],
    "react/jsx-closing-bracket-location": [
      "error",
      "tag-aligned",
    ],
    "react/jsx-closing-tag-location": [
      "error",
    ],
    "react/jsx-curly-brace-presence": [
      "error",
      {
        "children": "never",
        "props": "never",
      },
    ],
    "react/jsx-curly-newline": [
      "error",
      {
        "multiline": "consistent",
        "singleline": "consistent",
      },
    ],
    "react/jsx-curly-spacing": [
      "error",
      {
        "attributes": {
          "allowMultiline": true,
          "when": "never",
        },
        "children": {
          "allowMultiline": true,
          "when": "never",
        },
      },
    ],
    "react/jsx-equals-spacing": [
      "error",
      "never",
    ],
    "react/jsx-first-prop-new-line": [
      "error",
      "multiline-multiprop",
    ],
    "react/jsx-fragments": [
      "error",
      "syntax",
    ],
    "react/jsx-handler-names": [
      "error",
    ],
    "react/jsx-indent": [
      "error",
      2,
      {
        "checkAttributes": false,
        "indentLogicalExpressions": true,
      },
    ],
    "react/jsx-indent-props": [
      "error",
      2,
    ],
    "react/jsx-key": [
      "error",
      {
        "checkFragmentShorthand": true,
        "checkKeyMustBeforeSpread": false,
        "warnOnDuplicates": false,
      },
    ],
    "react/jsx-no-comment-textnodes": [
      "error",
    ],
    "react/jsx-no-duplicate-props": [
      "error",
    ],
    "react/jsx-no-target-blank": [
      "error",
      {
        "enforceDynamicLinks": "always",
        "forms": false,
        "links": true,
      },
    ],
    "react/jsx-no-undef": [
      "error",
      {
        "allowGlobals": true,
      },
    ],
    "react/jsx-no-useless-fragment": [
      "error",
      {
        "allowExpressions": true,
      },
    ],
    "react/jsx-pascal-case": [
      "error",
      {
        "allowAllCaps": false,
      },
    ],
    "react/jsx-props-no-multi-spaces": [
      "error",
    ],
    "react/jsx-tag-spacing": [
      "error",
      {
        "afterOpening": "never",
        "beforeClosing": "never",
        "beforeSelfClosing": "always",
        "closingSlash": "never",
      },
    ],
    "react/jsx-uses-react": [
      "error",
    ],
    "react/jsx-uses-vars": [
      "error",
    ],
    "react/jsx-wrap-multilines": [
      "error",
      {
        "arrow": "ignore",
        "assignment": "parens-new-line",
        "condition": "ignore",
        "declaration": "parens-new-line",
        "logical": "ignore",
        "prop": "ignore",
        "return": "parens-new-line",
      },
    ],
    "react/no-children-prop": [
      "error",
    ],
    "react/no-danger-with-children": [
      "error",
    ],
    "react/no-deprecated": [
      "error",
    ],
    "react/no-direct-mutation-state": [
      "error",
    ],
    "react/no-find-dom-node": [
      "error",
    ],
    "react/no-is-mounted": [
      "error",
    ],
    "react/no-render-return-value": [
      "error",
    ],
    "react/no-string-refs": [
      "error",
      {
        "noTemplateLiterals": true,
      },
    ],
    "react/no-unescaped-entities": [
      "error",
      {
        "forbid": [
          ">",
          "}",
        ],
      },
    ],
    "react/no-unknown-property": [
      "error",
      {
        "ignore": [
          "css",
        ],
      },
    ],
    "react/no-unsafe": [
      0,
    ],
    "react/prop-types": [
      "off",
    ],
    "react/react-in-jsx-scope": [
      0,
    ],
    "react/require-render-return": [
      "error",
    ],
    "react/self-closing-comp": [
      "error",
      {
        "component": true,
        "html": true,
      },
    ],
  },
  "settings": {
    "linkComponents": [
      "Link",
    ],
    "react": {
      "version": "detect",
    },
  },
}
`;

exports[`eslint javascript config 1`] = `
{
  "env": {
    "es2021": true,
    "node": true,
  },
  "globals": {
    "document": "readonly",
    "navigator": "readonly",
    "window": "readonly",
  },
  "ignorePatterns": [],
  "noInlineConfig": undefined,
  "parser": null,
  "parserOptions": {
    "ecmaFeatures": {
      "jsx": true,
    },
    "ecmaVersion": 2022,
    "sourceType": "module",
  },
  "plugins": [
    "promise",
    "n",
    "import",
  ],
  "reportUnusedDisableDirectives": undefined,
  "rules": {
    "accessor-pairs": [
      "error",
      {
        "enforceForClassMembers": true,
        "getWithoutSet": false,
        "setWithoutGet": true,
      },
    ],
    "array-bracket-spacing": [
      "error",
      "never",
    ],
    "array-callback-return": [
      "error",
      {
        "allowImplicit": false,
        "allowVoid": false,
        "checkForEach": false,
      },
    ],
    "arrow-spacing": [
      "error",
      {
        "after": true,
        "before": true,
      },
    ],
    "block-spacing": [
      "error",
      "always",
    ],
    "brace-style": [
      "error",
      "1tbs",
      {
        "allowSingleLine": true,
      },
    ],
    "camelcase": [
      "error",
      {
        "allow": [
          "^UNSAFE_",
        ],
        "ignoreDestructuring": false,
        "ignoreGlobals": true,
        "ignoreImports": false,
        "properties": "never",
      },
    ],
    "comma-dangle": [
      "error",
      {
        "arrays": "never",
        "exports": "never",
        "functions": "never",
        "imports": "never",
        "objects": "never",
      },
    ],
    "comma-spacing": [
      "error",
      {
        "after": true,
        "before": false,
      },
    ],
    "comma-style": [
      "error",
      "last",
    ],
    "computed-property-spacing": [
      "error",
      "never",
      {
        "enforceForClassMembers": true,
      },
    ],
    "constructor-super": [
      "error",
    ],
    "curly": [
      "error",
      "multi-line",
    ],
    "default-case-last": [
      "error",
    ],
    "dot-location": [
      "error",
      "property",
    ],
    "dot-notation": [
      "error",
      {
        "allowKeywords": true,
        "allowPattern": "",
      },
    ],
    "eol-last": [
      "error",
    ],
    "eqeqeq": [
      "error",
      "always",
      {
        "null": "ignore",
      },
    ],
    "for-direction": [
      "error",
    ],
    "func-call-spacing": [
      "error",
      "never",
    ],
    "func-style": [
      "error",
      "declaration",
      {
        "allowArrowFunctions": true,
      },
    ],
    "generator-star-spacing": [
      "error",
      {
        "after": true,
        "before": true,
      },
    ],
    "getter-return": [
      "error",
    ],
    "import/default": [
      "error",
    ],
    "import/export": [
      "error",
    ],
    "import/first": [
      "error",
    ],
    "import/named": [
      "error",
    ],
    "import/namespace": [
      "error",
    ],
    "import/newline-after-import": [
      "error",
    ],
    "import/no-absolute-path": [
      "error",
      {
        "amd": false,
        "commonjs": true,
        "esmodule": true,
      },
    ],
    "import/no-duplicates": [
      "error",
    ],
    "import/no-named-as-default": [
      "warn",
    ],
    "import/no-named-as-default-member": [
      "warn",
    ],
    "import/no-named-default": [
      "error",
    ],
    "import/no-unresolved": [
      "error",
    ],
    "import/no-webpack-loader-syntax": [
      "error",
    ],
    "import/order": [
      "error",
      {
        "distinctGroup": true,
        "newlines-between": "always",
        "pathGroups": [
          {
            "group": "parent",
            "pattern": "@/**",
            "position": "before",
          },
        ],
        "pathGroupsExcludedImportTypes": [
          "builtin",
        ],
        "warnOnUnassignedImports": false,
      },
    ],
    "indent": [
      "error",
      2,
      {
        "ArrayExpression": 1,
        "CallExpression": {
          "arguments": 1,
        },
        "FunctionDeclaration": {
          "body": 1,
          "parameters": 1,
        },
        "FunctionExpression": {
          "body": 1,
          "parameters": 1,
        },
        "ImportDeclaration": 1,
        "MemberExpression": 1,
        "ObjectExpression": 1,
        "SwitchCase": 1,
        "VariableDeclarator": 1,
        "flatTernaryExpressions": false,
        "ignoreComments": false,
        "ignoredNodes": [
          "TemplateLiteral *",
          "JSXElement",
          "JSXElement > *",
          "JSXAttribute",
          "JSXIdentifier",
          "JSXNamespacedName",
          "JSXMemberExpression",
          "JSXSpreadAttribute",
          "JSXExpressionContainer",
          "JSXOpeningElement",
          "JSXClosingElement",
          "JSXFragment",
          "JSXOpeningFragment",
          "JSXClosingFragment",
          "JSXText",
          "JSXEmptyExpression",
          "JSXSpreadChild",
        ],
        "offsetTernaryExpressions": true,
        "outerIIFEBody": 1,
      },
    ],
    "key-spacing": [
      "error",
      {
        "afterColon": true,
        "beforeColon": false,
      },
    ],
    "keyword-spacing": [
      "error",
      {
        "after": true,
        "before": true,
      },
    ],
    "lines-between-class-members": [
      "error",
      "always",
      {
        "exceptAfterSingleLine": true,
      },
    ],
    "multiline-ternary": [
      "error",
      "always-multiline",
    ],
    "n/handle-callback-err": [
      "error",
      "^(err|error)$",
    ],
    "n/no-callback-literal": [
      "error",
    ],
    "n/no-deprecated-api": [
      "error",
    ],
    "n/no-exports-assign": [
      "error",
    ],
    "n/no-new-require": [
      "error",
    ],
    "n/no-path-concat": [
      "error",
    ],
    "n/process-exit-as-throw": [
      "error",
    ],
    "new-cap": [
      "error",
      {
        "capIsNew": false,
        "newIsCap": true,
        "properties": true,
      },
    ],
    "new-parens": [
      "error",
    ],
    "no-array-constructor": [
      "error",
    ],
    "no-async-promise-executor": [
      "error",
    ],
    "no-caller": [
      "error",
    ],
    "no-case-declarations": [
      "error",
    ],
    "no-class-assign": [
      "error",
    ],
    "no-compare-neg-zero": [
      "error",
    ],
    "no-cond-assign": [
      "error",
    ],
    "no-console": [
      "error",
    ],
    "no-const-assign": [
      "error",
    ],
    "no-constant-condition": [
      "error",
      {
        "checkLoops": false,
      },
    ],
    "no-control-regex": [
      "error",
    ],
    "no-debugger": [
      "error",
    ],
    "no-delete-var": [
      "error",
    ],
    "no-dupe-args": [
      "error",
    ],
    "no-dupe-class-members": [
      "error",
    ],
    "no-dupe-else-if": [
      "error",
    ],
    "no-dupe-keys": [
      "error",
    ],
    "no-duplicate-case": [
      "error",
    ],
    "no-empty": [
      "error",
      {
        "allowEmptyCatch": true,
      },
    ],
    "no-empty-character-class": [
      "error",
    ],
    "no-empty-function": [
      "off",
    ],
    "no-empty-pattern": [
      "error",
    ],
    "no-eval": [
      "error",
    ],
    "no-ex-assign": [
      "error",
    ],
    "no-extend-native": [
      "error",
    ],
    "no-extra-bind": [
      "error",
    ],
    "no-extra-boolean-cast": [
      "error",
    ],
    "no-extra-parens": [
      "error",
      "functions",
    ],
    "no-extra-semi": [
      "error",
    ],
    "no-fallthrough": [
      "error",
    ],
    "no-floating-decimal": [
      "error",
    ],
    "no-func-assign": [
      "error",
    ],
    "no-global-assign": [
      "error",
    ],
    "no-implicit-coercion": [
      "error",
      {
        "allow": [
          "!!",
        ],
        "boolean": true,
        "disallowTemplateShorthand": false,
        "number": true,
        "string": true,
      },
    ],
    "no-implied-eval": [
      "error",
    ],
    "no-import-assign": [
      "error",
    ],
    "no-inner-declarations": [
      "error",
    ],
    "no-invalid-regexp": [
      "error",
    ],
    "no-irregular-whitespace": [
      "error",
    ],
    "no-iterator": [
      "error",
    ],
    "no-labels": [
      "error",
      {
        "allowLoop": false,
        "allowSwitch": false,
      },
    ],
    "no-lone-blocks": [
      "error",
    ],
    "no-loss-of-precision": [
      "error",
    ],
    "no-misleading-character-class": [
      "error",
    ],
    "no-mixed-operators": [
      "error",
      {
        "allowSamePrecedence": true,
        "groups": [
          [
            "==",
            "!=",
            "===",
            "!==",
            ">",
            ">=",
            "<",
            "<=",
          ],
          [
            "&&",
            "||",
          ],
          [
            "in",
            "instanceof",
          ],
        ],
      },
    ],
    "no-mixed-spaces-and-tabs": [
      "error",
    ],
    "no-multi-spaces": [
      "error",
    ],
    "no-multi-str": [
      "error",
    ],
    "no-multiple-empty-lines": [
      "error",
      {
        "max": 1,
        "maxBOF": 0,
        "maxEOF": 0,
      },
    ],
    "no-new": [
      "error",
    ],
    "no-new-func": [
      "error",
    ],
    "no-new-object": [
      "error",
    ],
    "no-new-symbol": [
      "error",
    ],
    "no-new-wrappers": [
      "error",
    ],
    "no-nonoctal-decimal-escape": [
      "error",
    ],
    "no-obj-calls": [
      "error",
    ],
    "no-octal": [
      "error",
    ],
    "no-octal-escape": [
      "error",
    ],
    "no-proto": [
      "error",
    ],
    "no-prototype-builtins": [
      "error",
    ],
    "no-redeclare": [
      "error",
      {
        "builtinGlobals": false,
      },
    ],
    "no-regex-spaces": [
      "error",
    ],
    "no-return-assign": [
      "error",
      "except-parens",
    ],
    "no-return-await": [
      "error",
    ],
    "no-self-assign": [
      "error",
      {
        "props": true,
      },
    ],
    "no-self-compare": [
      "error",
    ],
    "no-sequences": [
      "error",
    ],
    "no-setter-return": [
      "error",
    ],
    "no-shadow-restricted-names": [
      "error",
    ],
    "no-sparse-arrays": [
      "error",
    ],
    "no-tabs": [
      "error",
    ],
    "no-template-curly-in-string": [
      "error",
    ],
    "no-this-before-super": [
      "error",
    ],
    "no-throw-literal": [
      "error",
    ],
    "no-trailing-spaces": [
      "error",
    ],
    "no-undef": [
      "error",
    ],
    "no-undef-init": [
      "error",
    ],
    "no-unexpected-multiline": [
      "error",
    ],
    "no-unmodified-loop-condition": [
      "error",
    ],
    "no-unneeded-ternary": [
      "error",
      {
        "defaultAssignment": false,
      },
    ],
    "no-unreachable": [
      "error",
    ],
    "no-unreachable-loop": [
      "error",
    ],
    "no-unsafe-finally": [
      "error",
    ],
    "no-unsafe-negation": [
      "error",
    ],
    "no-unsafe-optional-chaining": [
      "error",
    ],
    "no-unused-expressions": [
      "error",
      {
        "allowShortCircuit": true,
        "allowTaggedTemplates": true,
        "allowTernary": true,
        "enforceForJSX": false,
      },
    ],
    "no-unused-labels": [
      "error",
    ],
    "no-unused-vars": [
      "error",
      {
        "argsIgnorePattern": "^_+$",
        "ignoreRestSiblings": true,
      },
    ],
    "no-use-before-define": [
      "error",
      {
        "functions": false,
      },
    ],
    "no-useless-backreference": [
      "error",
    ],
    "no-useless-call": [
      "error",
    ],
    "no-useless-catch": [
      "error",
    ],
    "no-useless-computed-key": [
      "error",
    ],
    "no-useless-constructor": [
      "error",
    ],
    "no-useless-escape": [
      "error",
    ],
    "no-useless-rename": [
      "error",
    ],
    "no-useless-return": [
      "error",
    ],
    "no-var": [
      "warn",
    ],
    "no-void": [
      "error",
      {
        "allowAsStatement": true,
      },
    ],
    "no-whitespace-before-property": [
      "error",
    ],
    "no-with": [
      "error",
    ],
    "object-curly-newline": [
      "error",
      {
        "consistent": true,
        "multiline": true,
      },
    ],
    "object-curly-spacing": [
      "error",
      "always",
    ],
    "object-property-newline": [
      "error",
      {
        "allowAllPropertiesOnSameLine": false,
        "allowMultiplePropertiesPerLine": true,
      },
    ],
    "object-shorthand": [
      "error",
      "properties",
    ],
    "one-var": [
      "error",
      {
        "initialized": "never",
      },
    ],
    "operator-linebreak": [
      "error",
      "after",
      {
        "overrides": {
          ":": "before",
          "?": "before",
          "|>": "before",
        },
      },
    ],
    "padded-blocks": [
      "error",
      {
        "blocks": "never",
        "classes": "never",
        "switches": "never",
      },
    ],
    "prefer-const": [
      "error",
      {
        "destructuring": "all",
        "ignoreReadBeforeAssign": false,
      },
    ],
    "prefer-promise-reject-errors": [
      "error",
    ],
    "prefer-regex-literals": [
      "error",
      {
        "disallowRedundantWrapping": true,
      },
    ],
    "promise/always-return": [
      "error",
    ],
    "promise/avoid-new": [
      "off",
    ],
    "promise/catch-or-return": [
      "error",
      {
        "allowFinally": true,
      },
    ],
    "promise/no-callback-in-promise": [
      "warn",
    ],
    "promise/no-native": [
      "off",
    ],
    "promise/no-nesting": [
      "warn",
    ],
    "promise/no-new-statics": [
      "error",
    ],
    "promise/no-promise-in-callback": [
      "warn",
    ],
    "promise/no-return-in-finally": [
      "warn",
    ],
    "promise/no-return-wrap": [
      "error",
    ],
    "promise/param-names": [
      "error",
    ],
    "promise/prefer-await-to-callbacks": [
      "error",
    ],
    "promise/prefer-await-to-then": [
      "error",
    ],
    "promise/valid-params": [
      "warn",
    ],
    "quote-props": [
      "error",
      "as-needed",
    ],
    "quotes": [
      "error",
      "single",
      {
        "allowTemplateLiterals": false,
        "avoidEscape": true,
      },
    ],
    "require-atomic-updates": [
      "off",
    ],
    "require-yield": [
      "error",
    ],
    "rest-spread-spacing": [
      "error",
      "never",
    ],
    "semi": [
      "error",
      "never",
    ],
    "semi-spacing": [
      "error",
      {
        "after": true,
        "before": false,
      },
    ],
    "space-before-blocks": [
      "error",
      "always",
    ],
    "space-before-function-paren": [
      "error",
      "always",
    ],
    "space-in-parens": [
      "error",
      "never",
    ],
    "space-infix-ops": [
      "error",
    ],
    "space-unary-ops": [
      "error",
      {
        "nonwords": false,
        "words": true,
      },
    ],
    "spaced-comment": [
      "error",
      "always",
      {
        "block": {
          "balanced": true,
          "exceptions": [
            "*",
          ],
          "markers": [
            "*package",
            "!",
            ",",
            ":",
            "::",
            "flow-include",
          ],
        },
        "line": {
          "markers": [
            "*package",
            "!",
            "/",
            ",",
            "=",
          ],
        },
      },
    ],
    "symbol-description": [
      "error",
    ],
    "template-curly-spacing": [
      "error",
      "never",
    ],
    "template-tag-spacing": [
      "error",
      "never",
    ],
    "unicode-bom": [
      "error",
      "never",
    ],
    "use-isnan": [
      "error",
      {
        "enforceForIndexOf": true,
        "enforceForSwitchCase": true,
      },
    ],
    "valid-typeof": [
      "error",
      {
        "requireStringLiterals": true,
      },
    ],
    "wrap-iife": [
      "error",
      "any",
      {
        "functionPrototypeMethods": true,
      },
    ],
    "yield-star-spacing": [
      "error",
      "both",
    ],
    "yoda": [
      "error",
      "never",
    ],
  },
  "settings": {},
}
`;

exports[`eslint typescript config 1`] = `
{
  "env": {
    "es2021": true,
    "node": true,
  },
  "globals": {
    "document": "readonly",
    "navigator": "readonly",
    "window": "readonly",
  },
  "ignorePatterns": [],
  "noInlineConfig": undefined,
  "parser": StringMatching /@typescript-eslint/,
  "parserOptions": {
    "ecmaFeatures": {
      "jsx": true,
    },
    "ecmaVersion": 2022,
    "sourceType": "module",
  },
  "plugins": [
    "promise",
    "n",
    "import",
    "@typescript-eslint",
  ],
  "reportUnusedDisableDirectives": undefined,
  "rules": {
    "@typescript-eslint/ban-ts-comment": [
      "error",
    ],
    "@typescript-eslint/ban-types": [
      "error",
    ],
    "@typescript-eslint/consistent-type-assertions": [
      "error",
    ],
    "@typescript-eslint/consistent-type-definitions": [
      "error",
    ],
    "@typescript-eslint/explicit-member-accessibility": [
      "error",
    ],
    "@typescript-eslint/no-array-constructor": [
      "error",
    ],
    "@typescript-eslint/no-duplicate-enum-values": [
      "error",
    ],
    "@typescript-eslint/no-empty-function": [
      "off",
    ],
    "@typescript-eslint/no-explicit-any": [
      "error",
    ],
    "@typescript-eslint/no-extra-non-null-assertion": [
      "error",
    ],
    "@typescript-eslint/no-loss-of-precision": [
      "error",
    ],
    "@typescript-eslint/no-misused-new": [
      "error",
    ],
    "@typescript-eslint/no-namespace": [
      "error",
    ],
    "@typescript-eslint/no-non-null-asserted-optional-chain": [
      "error",
    ],
    "@typescript-eslint/no-this-alias": [
      "error",
    ],
    "@typescript-eslint/no-unnecessary-type-constraint": [
      "error",
    ],
    "@typescript-eslint/no-unsafe-declaration-merging": [
      "error",
    ],
    "@typescript-eslint/no-unused-expressions": [
      "error",
      {
        "allowShortCircuit": true,
        "allowTaggedTemplates": true,
        "allowTernary": true,
        "enforceForJSX": false,
      },
    ],
    "@typescript-eslint/no-unused-vars": [
      "error",
      {
        "argsIgnorePattern": "^_+$",
        "ignoreRestSiblings": true,
      },
    ],
    "@typescript-eslint/no-use-before-define": [
      "error",
      {
        "functions": false,
      },
    ],
    "@typescript-eslint/no-var-requires": [
      "off",
    ],
    "@typescript-eslint/prefer-as-const": [
      "error",
    ],
    "@typescript-eslint/triple-slash-reference": [
      "error",
    ],
    "accessor-pairs": [
      "error",
      {
        "enforceForClassMembers": true,
        "getWithoutSet": false,
        "setWithoutGet": true,
      },
    ],
    "array-bracket-spacing": [
      "error",
      "never",
    ],
    "array-callback-return": [
      "error",
      {
        "allowImplicit": false,
        "allowVoid": false,
        "checkForEach": false,
      },
    ],
    "arrow-spacing": [
      "error",
      {
        "after": true,
        "before": true,
      },
    ],
    "block-spacing": [
      "error",
      "always",
    ],
    "brace-style": [
      "error",
      "1tbs",
      {
        "allowSingleLine": true,
      },
    ],
    "camelcase": [
      "error",
      {
        "allow": [
          "^UNSAFE_",
        ],
        "ignoreDestructuring": false,
        "ignoreGlobals": true,
        "ignoreImports": false,
        "properties": "never",
      },
    ],
    "comma-dangle": [
      "error",
      {
        "arrays": "never",
        "exports": "never",
        "functions": "never",
        "imports": "never",
        "objects": "never",
      },
    ],
    "comma-spacing": [
      "error",
      {
        "after": true,
        "before": false,
      },
    ],
    "comma-style": [
      "error",
      "last",
    ],
    "computed-property-spacing": [
      "error",
      "never",
      {
        "enforceForClassMembers": true,
      },
    ],
    "constructor-super": [
      "off",
    ],
    "curly": [
      "error",
      "multi-line",
    ],
    "default-case-last": [
      "error",
    ],
    "dot-location": [
      "error",
      "property",
    ],
    "dot-notation": [
      "error",
      {
        "allowKeywords": true,
        "allowPattern": "",
      },
    ],
    "eol-last": [
      "error",
    ],
    "eqeqeq": [
      "error",
      "always",
      {
        "null": "ignore",
      },
    ],
    "for-direction": [
      "error",
    ],
    "func-call-spacing": [
      "error",
      "never",
    ],
    "func-style": [
      "error",
      "declaration",
      {
        "allowArrowFunctions": true,
      },
    ],
    "generator-star-spacing": [
      "error",
      {
        "after": true,
        "before": true,
      },
    ],
    "getter-return": [
      "off",
    ],
    "import/default": [
      "off",
    ],
    "import/export": [
      "error",
    ],
    "import/first": [
      "error",
    ],
    "import/named": [
      "off",
    ],
    "import/namespace": [
      "off",
    ],
    "import/newline-after-import": [
      "error",
    ],
    "import/no-absolute-path": [
      "error",
      {
        "amd": false,
        "commonjs": true,
        "esmodule": true,
      },
    ],
    "import/no-duplicates": [
      "error",
    ],
    "import/no-named-as-default": [
      "warn",
    ],
    "import/no-named-as-default-member": [
      "off",
    ],
    "import/no-named-default": [
      "error",
    ],
    "import/no-unresolved": [
      "error",
    ],
    "import/no-webpack-loader-syntax": [
      "error",
    ],
    "import/order": [
      "error",
      {
        "distinctGroup": true,
        "newlines-between": "always",
        "pathGroups": [
          {
            "group": "parent",
            "pattern": "@/**",
            "position": "before",
          },
        ],
        "pathGroupsExcludedImportTypes": [
          "builtin",
        ],
        "warnOnUnassignedImports": false,
      },
    ],
    "indent": [
      "error",
      2,
      {
        "ArrayExpression": 1,
        "CallExpression": {
          "arguments": 1,
        },
        "FunctionDeclaration": {
          "body": 1,
          "parameters": 1,
        },
        "FunctionExpression": {
          "body": 1,
          "parameters": 1,
        },
        "ImportDeclaration": 1,
        "MemberExpression": 1,
        "ObjectExpression": 1,
        "SwitchCase": 1,
        "VariableDeclarator": 1,
        "flatTernaryExpressions": false,
        "ignoreComments": false,
        "ignoredNodes": [
          "TemplateLiteral *",
          "JSXElement",
          "JSXElement > *",
          "JSXAttribute",
          "JSXIdentifier",
          "JSXNamespacedName",
          "JSXMemberExpression",
          "JSXSpreadAttribute",
          "JSXExpressionContainer",
          "JSXOpeningElement",
          "JSXClosingElement",
          "JSXFragment",
          "JSXOpeningFragment",
          "JSXClosingFragment",
          "JSXText",
          "JSXEmptyExpression",
          "JSXSpreadChild",
        ],
        "offsetTernaryExpressions": true,
        "outerIIFEBody": 1,
      },
    ],
    "key-spacing": [
      "error",
      {
        "afterColon": true,
        "beforeColon": false,
      },
    ],
    "keyword-spacing": [
      "error",
      {
        "after": true,
        "before": true,
      },
    ],
    "lines-between-class-members": [
      "error",
      "always",
      {
        "exceptAfterSingleLine": true,
      },
    ],
    "multiline-ternary": [
      "error",
      "always-multiline",
    ],
    "n/handle-callback-err": [
      "error",
      "^(err|error)$",
    ],
    "n/no-callback-literal": [
      "error",
    ],
    "n/no-deprecated-api": [
      "error",
    ],
    "n/no-exports-assign": [
      "error",
    ],
    "n/no-new-require": [
      "error",
    ],
    "n/no-path-concat": [
      "error",
    ],
    "n/process-exit-as-throw": [
      "error",
    ],
    "new-cap": [
      "error",
      {
        "capIsNew": false,
        "newIsCap": true,
        "properties": true,
      },
    ],
    "new-parens": [
      "error",
    ],
    "no-array-constructor": [
      "off",
    ],
    "no-async-promise-executor": [
      "error",
    ],
    "no-caller": [
      "error",
    ],
    "no-case-declarations": [
      "error",
    ],
    "no-class-assign": [
      "error",
    ],
    "no-compare-neg-zero": [
      "error",
    ],
    "no-cond-assign": [
      "error",
    ],
    "no-console": [
      "error",
    ],
    "no-const-assign": [
      "off",
    ],
    "no-constant-condition": [
      "error",
      {
        "checkLoops": false,
      },
    ],
    "no-control-regex": [
      "error",
    ],
    "no-debugger": [
      "error",
    ],
    "no-delete-var": [
      "error",
    ],
    "no-dupe-args": [
      "off",
    ],
    "no-dupe-class-members": [
      "off",
    ],
    "no-dupe-else-if": [
      "error",
    ],
    "no-dupe-keys": [
      "off",
    ],
    "no-duplicate-case": [
      "error",
    ],
    "no-empty": [
      "error",
      {
        "allowEmptyCatch": true,
      },
    ],
    "no-empty-character-class": [
      "error",
    ],
    "no-empty-function": [
      "off",
    ],
    "no-empty-pattern": [
      "error",
    ],
    "no-eval": [
      "error",
    ],
    "no-ex-assign": [
      "error",
    ],
    "no-extend-native": [
      "error",
    ],
    "no-extra-bind": [
      "error",
    ],
    "no-extra-boolean-cast": [
      "error",
    ],
    "no-extra-parens": [
      "error",
      "functions",
    ],
    "no-extra-semi": [
      "error",
    ],
    "no-fallthrough": [
      "error",
    ],
    "no-floating-decimal": [
      "error",
    ],
    "no-func-assign": [
      "off",
    ],
    "no-global-assign": [
      "error",
    ],
    "no-implicit-coercion": [
      "error",
      {
        "allow": [
          "!!",
        ],
        "boolean": true,
        "disallowTemplateShorthand": false,
        "number": true,
        "string": true,
      },
    ],
    "no-implied-eval": [
      "error",
    ],
    "no-import-assign": [
      "off",
    ],
    "no-inner-declarations": [
      "error",
    ],
    "no-invalid-regexp": [
      "error",
    ],
    "no-irregular-whitespace": [
      "error",
    ],
    "no-iterator": [
      "error",
    ],
    "no-labels": [
      "error",
      {
        "allowLoop": false,
        "allowSwitch": false,
      },
    ],
    "no-lone-blocks": [
      "error",
    ],
    "no-loss-of-precision": [
      "off",
    ],
    "no-misleading-character-class": [
      "error",
    ],
    "no-mixed-operators": [
      "error",
      {
        "allowSamePrecedence": true,
        "groups": [
          [
            "==",
            "!=",
            "===",
            "!==",
            ">",
            ">=",
            "<",
            "<=",
          ],
          [
            "&&",
            "||",
          ],
          [
            "in",
            "instanceof",
          ],
        ],
      },
    ],
    "no-mixed-spaces-and-tabs": [
      "error",
    ],
    "no-multi-spaces": [
      "error",
    ],
    "no-multi-str": [
      "error",
    ],
    "no-multiple-empty-lines": [
      "error",
      {
        "max": 1,
        "maxBOF": 0,
        "maxEOF": 0,
      },
    ],
    "no-new": [
      "error",
    ],
    "no-new-func": [
      "error",
    ],
    "no-new-object": [
      "error",
    ],
    "no-new-symbol": [
      "off",
    ],
    "no-new-wrappers": [
      "error",
    ],
    "no-nonoctal-decimal-escape": [
      "error",
    ],
    "no-obj-calls": [
      "off",
    ],
    "no-octal": [
      "error",
    ],
    "no-octal-escape": [
      "error",
    ],
    "no-proto": [
      "error",
    ],
    "no-prototype-builtins": [
      "error",
    ],
    "no-redeclare": [
      "off",
      {
        "builtinGlobals": false,
      },
    ],
    "no-regex-spaces": [
      "error",
    ],
    "no-return-assign": [
      "error",
      "except-parens",
    ],
    "no-return-await": [
      "error",
    ],
    "no-self-assign": [
      "error",
      {
        "props": true,
      },
    ],
    "no-self-compare": [
      "error",
    ],
    "no-sequences": [
      "error",
    ],
    "no-setter-return": [
      "off",
    ],
    "no-shadow-restricted-names": [
      "error",
    ],
    "no-sparse-arrays": [
      "error",
    ],
    "no-tabs": [
      "error",
    ],
    "no-template-curly-in-string": [
      "error",
    ],
    "no-this-before-super": [
      "off",
    ],
    "no-throw-literal": [
      "error",
    ],
    "no-trailing-spaces": [
      "error",
    ],
    "no-undef": [
      "off",
    ],
    "no-undef-init": [
      "error",
    ],
    "no-unexpected-multiline": [
      "error",
    ],
    "no-unmodified-loop-condition": [
      "error",
    ],
    "no-unneeded-ternary": [
      "error",
      {
        "defaultAssignment": false,
      },
    ],
    "no-unreachable": [
      "off",
    ],
    "no-unreachable-loop": [
      "error",
    ],
    "no-unsafe-finally": [
      "error",
    ],
    "no-unsafe-negation": [
      "off",
    ],
    "no-unsafe-optional-chaining": [
      "error",
    ],
    "no-unused-expressions": [
      "off",
      {
        "allowShortCircuit": true,
        "allowTaggedTemplates": true,
        "allowTernary": true,
        "enforceForJSX": false,
      },
    ],
    "no-unused-labels": [
      "error",
    ],
    "no-unused-vars": [
      "off",
      {
        "argsIgnorePattern": "^_+$",
        "ignoreRestSiblings": true,
      },
    ],
    "no-use-before-define": [
      "off",
      {
        "functions": false,
      },
    ],
    "no-useless-backreference": [
      "error",
    ],
    "no-useless-call": [
      "error",
    ],
    "no-useless-catch": [
      "error",
    ],
    "no-useless-computed-key": [
      "error",
    ],
    "no-useless-constructor": [
      "error",
    ],
    "no-useless-escape": [
      "error",
    ],
    "no-useless-rename": [
      "error",
    ],
    "no-useless-return": [
      "error",
    ],
    "no-var": [
      "error",
    ],
    "no-void": [
      "error",
      {
        "allowAsStatement": true,
      },
    ],
    "no-whitespace-before-property": [
      "error",
    ],
    "no-with": [
      "error",
    ],
    "object-curly-newline": [
      "error",
      {
        "consistent": true,
        "multiline": true,
      },
    ],
    "object-curly-spacing": [
      "error",
      "always",
    ],
    "object-property-newline": [
      "error",
      {
        "allowAllPropertiesOnSameLine": false,
        "allowMultiplePropertiesPerLine": true,
      },
    ],
    "object-shorthand": [
      "error",
      "properties",
    ],
    "one-var": [
      "error",
      {
        "initialized": "never",
      },
    ],
    "operator-linebreak": [
      "error",
      "after",
      {
        "overrides": {
          ":": "before",
          "?": "before",
          "|>": "before",
        },
      },
    ],
    "padded-blocks": [
      "error",
      {
        "blocks": "never",
        "classes": "never",
        "switches": "never",
      },
    ],
    "prefer-const": [
      "error",
      {
        "destructuring": "all",
        "ignoreReadBeforeAssign": false,
      },
    ],
    "prefer-promise-reject-errors": [
      "error",
    ],
    "prefer-regex-literals": [
      "error",
      {
        "disallowRedundantWrapping": true,
      },
    ],
    "prefer-rest-params": [
      "error",
    ],
    "prefer-spread": [
      "error",
    ],
    "promise/always-return": [
      "error",
    ],
    "promise/avoid-new": [
      "off",
    ],
    "promise/catch-or-return": [
      "error",
      {
        "allowFinally": true,
      },
    ],
    "promise/no-callback-in-promise": [
      "warn",
    ],
    "promise/no-native": [
      "off",
    ],
    "promise/no-nesting": [
      "warn",
    ],
    "promise/no-new-statics": [
      "error",
    ],
    "promise/no-promise-in-callback": [
      "warn",
    ],
    "promise/no-return-in-finally": [
      "warn",
    ],
    "promise/no-return-wrap": [
      "error",
    ],
    "promise/param-names": [
      "error",
    ],
    "promise/prefer-await-to-callbacks": [
      "error",
    ],
    "promise/prefer-await-to-then": [
      "error",
    ],
    "promise/valid-params": [
      "warn",
    ],
    "quote-props": [
      "error",
      "as-needed",
    ],
    "quotes": [
      "error",
      "single",
      {
        "allowTemplateLiterals": false,
        "avoidEscape": true,
      },
    ],
    "require-atomic-updates": [
      "off",
    ],
    "require-yield": [
      "error",
    ],
    "rest-spread-spacing": [
      "error",
      "never",
    ],
    "semi": [
      "error",
      "never",
    ],
    "semi-spacing": [
      "error",
      {
        "after": true,
        "before": false,
      },
    ],
    "space-before-blocks": [
      "error",
      "always",
    ],
    "space-before-function-paren": [
      "error",
      "always",
    ],
    "space-in-parens": [
      "error",
      "never",
    ],
    "space-infix-ops": [
      "error",
    ],
    "space-unary-ops": [
      "error",
      {
        "nonwords": false,
        "words": true,
      },
    ],
    "spaced-comment": [
      "error",
      "always",
      {
        "block": {
          "balanced": true,
          "exceptions": [
            "*",
          ],
          "markers": [
            "*package",
            "!",
            ",",
            ":",
            "::",
            "flow-include",
          ],
        },
        "line": {
          "markers": [
            "*package",
            "!",
            "/",
            ",",
            "=",
          ],
        },
      },
    ],
    "symbol-description": [
      "error",
    ],
    "template-curly-spacing": [
      "error",
      "never",
    ],
    "template-tag-spacing": [
      "error",
      "never",
    ],
    "unicode-bom": [
      "error",
      "never",
    ],
    "use-isnan": [
      "error",
      {
        "enforceForIndexOf": true,
        "enforceForSwitchCase": true,
      },
    ],
    "valid-typeof": [
      "error",
      {
        "requireStringLiterals": true,
      },
    ],
    "wrap-iife": [
      "error",
      "any",
      {
        "functionPrototypeMethods": true,
      },
    ],
    "yield-star-spacing": [
      "error",
      "both",
    ],
    "yoda": [
      "error",
      "never",
    ],
  },
  "settings": {
    "import/extensions": [
      ".ts",
      ".cts",
      ".mts",
      ".tsx",
      ".js",
      ".jsx",
    ],
    "import/external-module-folders": [
      "node_modules",
      "node_modules/@types",
    ],
    "import/parsers": {
      "@typescript-eslint/parser": [
        ".ts",
        ".cts",
        ".mts",
        ".tsx",
      ],
    },
    "import/resolver": {
      "node": {
        "extensions": [
          ".ts",
          ".cts",
          ".mts",
          ".tsx",
          ".js",
          ".jsx",
        ],
      },
      "typescript": {
        "alwaysTryTypes": true,
      },
    },
  },
}
`;
